network-policy/create-NetworkPolicy/egress-deny.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: network1
spec:
  podSelector: {}
  policyTypes:
  - Egress
...
