network-policy/create-NetworkPolicy/egress-policy1.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-nginx
spec:
  podSelector:
    matchLabels:
      role: proxy
  policyTypes:
    - Egress
  egress:
    - {}
