network-policy/create-NetworkPolicy/egress-policy2.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-nginx
spec:
  podSelector:
    matchLabels:
      role: proxy
  policyTypes:
    - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          role: app
