network-policy/create-NetworkPolicy/ingress-deny.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-ingress-deny
  namespace: network1
spec:
  podSelector: {}
  policyTypes:
  - Ingress
...
