network-policy/create-NetworkPolicy/policy1.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-nginx
spec:
  podSelector:
    matchLabels:
      role: app
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: proxy
